--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   <title>Hello JS</title>
 </head>
 <body>
+
+
+
   <div>
     Open the developer console by right clicking anywhere inside the page and selecting
     <strong>Inspect (chrome) or Inspect Element (firefox)</strong>
   </div>
+  
+  <script src="index.js"></script>
+
 </body>
 </html>
